(executable
 (name serve)
 (libraries core core_unix.command_unix async cohttp-async)
 (preprocess
  (pps ppx_jane)))

; Copy the compiled game next to the launcher so it can serve the two files
; from its own directory regardless of the working directory.

(rule
 (copy ../bin/index.html index.html))

(rule
 (copy ../bin/main.bc.js main.bc.js))

; The uploaded sound effects, copied next to the launcher so it serves them
; over HTTP by their bare names (see {!Sandbox_web.Audio}).

(copy_files
 (files ../../assets/*.mp3))

; A throwaway module the launcher depends on, so building the launcher also
; builds (and copies) the js bundle and the audio: one [dune exec] does
; everything.

(rule
 (target bundle_ready.ml)
 (deps
  index.html
  main.bc.js
  (glob_files *.mp3))
 (action
  (with-stdout-to
   bundle_ready.ml
   (echo "let () = () (* forces the web bundle to build and copy *)\n"))))
